--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,269 @@
-/* Font in design files is Raleway */
-
-/* background-image in Design 👇
- url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg'); */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+body {
+  margin: 4% 10%;
+  font-family: "Roboto", sans-serif;
+}
+html {
+  font-size: 62.5%;
+}
+h1 {
+  font-size: 3.2rem;
+  font-weight: bold;
+}
+a,
+span {
+  font-size: 2.4rem;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: blue;
+}
+nav {
+  padding: 0 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+nav a:nth-of-type(1) {
+  font-weight: bold;
+}
+@media (max-width: 800px) {
+  nav {
+    padding: 0 20%;
+  }
+}
+@media (max-width: 500px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  nav span {
+    display: none;
+  }
+}
+.title-container {
+  width: 80%;
+  margin: 2% 10%;
+  background-image: url("../assets/home.png");
+  background-size: cover;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.title-container h1 {
+  font-size: 4.4rem;
+  color: white;
+}
+@media (max-width: 500px) {
+  .title-container h1 {
+    text-align: center;
+    font-size: 3.2rem;
+  }
+}
+.title-container .contactButton {
+  display: block;
+  background-color: white;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 10%;
+  height: 45px;
+  font-size: 2rem;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 2px 2px #141414;
+  margin: 1%;
+}
+@media (max-width: 800px) {
+  .title-container .contactButton {
+    display: block;
+    background-color: white;
+    margin: 0 10px 20px;
+    cursor: pointer;
+    width: 30%;
+    height: 45px;
+    font-size: 2rem;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 2%;
+  }
+}
+@media (max-width: 500px) {
+  .title-container .contactButton {
+    display: block;
+    background-color: white;
+    margin: 0 10px 20px;
+    cursor: pointer;
+    width: 40%;
+    height: 45px;
+    font-size: 2rem;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 5%;
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 800px) {
+  .title-container {
+    height: 30vh;
+  }
+}
+@media (max-width: 500px) {
+  .title-container {
+    height: 20vh;
+  }
+}
+.artists-container {
+  width: 90%;
+  margin: 2% 5%;
+  padding-top: 3%;
+  text-align: center;
+  border-top: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+}
+.artists-container .artist {
+  width: 40%;
+}
+.artists-container .artist img {
+  width: 100%;
+  height: 40vh;
+  margin-bottom: 2%;
+}
+@media (max-width: 800px) {
+  .artists-container .artist img {
+    height: 30vh;
+  }
+}
+@media (max-width: 500px) {
+  .artists-container .artist img {
+    height: 20vh;
+  }
+}
+@media (max-width: 800px) {
+  .artists-container .artist {
+    width: 90%;
+  }
+}
+.artists-container .bio {
+  margin-top: 2%;
+  font-size: 1.2rem;
+}
+@media (max-width: 800px) {
+  .artists-container .bio {
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 800px) {
+  .artists-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
